--- a/docs/basic.ipynb
+++ b/docs/basic.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -41,20 +41,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:opentrons_shared_data.load:Using packaged shared data path: /Users/rickwierenga/pyhamilton/Dropbox (MIT)/Hamilton_Methods/Pyhamilton_Methods/220319_rick_folder/pylabrobot/env/lib/python3.10/site-packages/opentrons_shared_data/data\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from pylabrobot.liquid_handling import LiquidHandler\n",
-        "from pylabrobot.liquid_handling.backends import STAR"
+        "\n",
+        "from pylabrobot.liquid_handling.backends import STAR\n",
+        "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
+        "from pylabrobot.liquid_handling.backends.saver_backend import SaverBackend"
       ]
     },
     {
@@ -66,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -82,11 +77,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "backend = STAR()\n",
+        "# backend = STAR()\n",
+        "backend = ChatterBoxBackend(num_channels=1)\n",
+        "#backend = SaverBackend(num_channels=1)\n",
+        "\n",
         "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
       ]
     },
@@ -99,43 +97,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "scrolled": false
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Finding Hamilton USB device...\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Found Hamilton USB device.\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Found endpoints. \n",
-            "Write:\n",
-            "       ENDPOINT 0x2: Bulk OUT ===============================\n",
-            "       bLength          :    0x7 (7 bytes)\n",
-            "       bDescriptorType  :    0x5 Endpoint\n",
-            "       bEndpointAddress :    0x2 OUT\n",
-            "       bmAttributes     :    0x2 Bulk\n",
-            "       wMaxPacketSize   :   0x40 (64 bytes)\n",
-            "       bInterval        :    0x0 \n",
-            "Read:\n",
-            "       ENDPOINT 0x81: Bulk IN ===============================\n",
-            "       bLength          :    0x7 (7 bytes)\n",
-            "       bDescriptorType  :    0x5 Endpoint\n",
-            "       bEndpointAddress :   0x81 IN\n",
-            "       bmAttributes     :    0x2 Bulk\n",
-            "       wMaxPacketSize   :   0x40 (64 bytes)\n",
-            "       bInterval        :    0x0\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0QWid0001\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0QWid0001er00/00qw1\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: R0QWid0002\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: R0QWid0002qw1\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0PGid0003th2840\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0PGid0003er00/00\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "await lh.setup()"
       ]
@@ -160,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,12 +147,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "tip_car = TIP_CAR_480_A00(name='tip carrier')\n",
-        "tip_car[0] = HTF_L(name='tips_01')"
+        "tip_car[0] = HTF_L(name='tips_01', with_tips=True)"
       ]
     },
     {
@@ -200,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -216,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -226,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -242,31 +208,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Rail     Resource                   Type                Coordinates (mm)\n",
-            "===============================================================================================\n",
-            "(3)  ├── tip carrier                TipCarrier          (145.000, 063.000, 100.000)\n",
-            "     │   ├── tips_01                TipRack             (162.900, 145.800, 131.450)\n",
-            "     │   ├── <empty>\n",
-            "     │   ├── <empty>\n",
-            "     │   ├── <empty>\n",
-            "     │   ├── <empty>\n",
-            "     │\n",
-            "(15) ├── plate carrier              PlateCarrier        (415.000, 063.000, 100.000)\n",
-            "     │   ├── plate_01               Plate               (433.000, 146.000, 187.150)\n",
-            "     │   ├── <empty>\n",
-            "     │   ├── <empty>\n",
-            "     │   ├── <empty>\n",
-            "     │   ├── <empty>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "lh.summary()"
       ]
@@ -282,20 +226,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0TTid0004tt01tf1tl0871tv12500tg3tu0\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0TTid0004er00/00\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0TPid0005xp01629 01629 01629 00000&yp1458 1368 1278 0000&tm1 1 1 0&tt01tp2244tz2164th2450td0\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0TPid0005er00/00\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "tiprack = lh.get_resource(\"tips_01\")\n",
         "await lh.pick_up_tips(tiprack[\"A1:C1\"])"
@@ -319,18 +252,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0ASid0006at0&tm1 1 1 0&xp04330 04330 04330 00000&yp1460 1370 1280 0000&th2450te2450lp1931 1931 1931&ch000 000 000&zl1881 1881 1881&po0100 0100 0100&zu0032 0032 0032&zr06180 06180 06180&zx1831 1831 1831&ip0000 0000 0000&it0 0 0&fp0000 0000 0000&av01072 00551 02110&as1000 1000 1000&ta000 000 000&ba0000 0000 0000&oa000 000 000&lm0 0 0&ll1 1 1&lv1 1 1&zo000 000 000&ld00 00 00&de0020 0020 0020&wt10 10 10&mv00000 00000 00000&mc00 00 00&mp000 000 000&ms1000 1000 1000&mh0000 0000 0000&gi000 000 000&gj0gk0lk0 0 0&ik0000 0000 0000&sd0500 0500 0500&se0500 0500 0500&sz0300 0300 0300&io0000 0000 0000&il00000 00000 00000&in0000 0000 0000&\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0ASid0006er00/00\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "plate = lh.get_resource(\"plate_01\")\n",
         "await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])"
@@ -345,18 +269,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0DSid0007dm2 2 2&tm1 1 1 0&xp04330 04330 04330 00000&yp1190 1100 1010 0000&zx1871 1871 1871&lp2321 2321 2321&zl1881 1881 1881&po0100 0100 0100&ip0000 0000 0000&it0 0 0&fp0000 0000 0000&zu0032 0032 0032&zr06180 06180 06180&th2450te2450dv01072 00551 02110&ds1200 1200 1200&ss0050 0050 0050&rv000 000 000&ta000 000 000&ba0000 0000 0000&lm0 0 0&dj00zo000 000 000&ll1 1 1&lv1 1 1&de0020 0020 0020&wt00 00 00&mv00000 00000 00000&mc00 00 00&mp000 000 000&ms0010 0010 0010&mh0000 0000 0000&gi000 000 000&gj0gk0\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0DSid0007er00/00\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
       ]
@@ -370,20 +285,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0ASid0008at0&tm1 1 1 0&xp04330 04330 04330 00000&yp1190 1100 1010 0000&th2450te2450lp1931 1931 1931&ch000 000 000&zl1881 1881 1881&po0100 0100 0100&zu0032 0032 0032&zr06180 06180 06180&zx1831 1831 1831&ip0000 0000 0000&it0 0 0&fp0000 0000 0000&av01072 00551 02110&as1000 1000 1000&ta000 000 000&ba0000 0000 0000&oa000 000 000&lm0 0 0&ll1 1 1&lv1 1 1&zo000 000 000&ld00 00 00&de0020 0020 0020&wt10 10 10&mv00000 00000 00000&mc00 00 00&mp000 000 000&ms1000 1000 1000&mh0000 0000 0000&gi000 000 000&gj0gk0lk0 0 0&ik0000 0000 0000&sd0500 0500 0500&se0500 0500 0500&sz0300 0300 0300&io0000 0000 0000&il00000 00000 00000&in0000 0000 0000&\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0ASid0008er00/00\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0DSid0009dm2 2 2&tm1 1 1 0&xp04330 04330 04330 00000&yp1460 1370 1280 0000&zx1871 1871 1871&lp2321 2321 2321&zl1881 1881 1881&po0100 0100 0100&ip0000 0000 0000&it0 0 0&fp0000 0000 0000&zu0032 0032 0032&zr06180 06180 06180&th2450te2450dv01072 00551 02110&ds1200 1200 1200&ss0050 0050 0050&rv000 000 000&ta000 000 000&ba0000 0000 0000&lm0 0 0&dj00zo000 000 000&ll1 1 1&lv1 1 1&de0020 0020 0020&wt00 00 00&mv00000 00000 00000&mc00 00 00&mp000 000 000&ms0010 0010 0010&mh0000 0000 0000&gi000 000 000&gj0gk0\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0DSid0009er00/00\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "await lh.aspirate(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])\n",
         "await lh.dispense(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])"
@@ -400,35 +304,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Sent command: C0TRid0010xp01629 01629 01629 00000&yp1458 1368 1278 0000&tm1 1 1 0&tt01tp1314tz1414th2450ti0\n",
-            "INFO:pylabrobot.liquid_handling.backends.hamilton.STAR:Received response: C0TRid0010er00/00kz381 356 365 000 000 000 000 000vz303 360 368 000 000 000 000 000\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "await lh.discard_tips(tiprack[\"A1:C1\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:root:Closing connection to USB device.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "await lh.stop()"
       ]
@@ -450,7 +337,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.10.10"
     },
     "vscode": {
       "interpreter": {
