--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -26,19 +26,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/home/nicomic/Projects/GOSH/gosh-col-dev/pylabrobot/.venv\n",
-            "Current working directory: /home/nicomic/Projects/GOSH/gosh-col-dev/pylabrobot/notebooks\n",
-            "Using python: /home/nicomic/Projects/GOSH/gosh-col-dev/pylabrobot/.venv/bin/python\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!echo $VIRTUAL_ENV\n",
         "\n",
@@ -57,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -84,30 +74,9 @@
         "from pylabrobot.liquid_handling import LiquidHandler\n",
         "# - backend\n",
         "from pylabrobot.liquid_handling.backends import STAR\n",
+        "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
         "# - deck\n",
         "from pylabrobot.resources.hamilton import STARLetDeck"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Error: name 'well_plate' is not defined\n"
-          ]
-        }
-      ],
-      "source": [
-        "try:\n",
-        "  well_plate.assign_child_resource(well_plate, location=Coordinate(10, 10, 0))\n",
-        "except Exception as e:\n",
-        "  print(f\"Error: {e}\")\n",
-        "else:\n",
-        "  print(f\"No error :/\")"
       ]
     },
     {
@@ -120,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -154,21 +123,23 @@
         "class PiperBackend(LiquidHandlerBackend):\n",
         "    \"\"\" Chatter box backend for 'How to Open Source' \"\"\"\n",
         "\n",
-        "    def __init__(self, num_channels: int = 2):\n",
+        "    def __init__(self, num_channels: int = 1):\n",
         "        \"\"\"Init method for the PiperBackend.\"\"\"\n",
         "        print(f\"Instantiating the PiperBackend with num_channels={num_channels}\")\n",
         "        super().__init__()\n",
         "        self._num_channels = num_channels\n",
-        "    \n",
-        "    @property\n",
-        "    def num_channels(self) -> int:\n",
-        "        return self._num_channels\n",
         "\n",
         "    async def setup(self):\n",
+        "        await super().setup()\n",
         "        print(\"Setting up the robot.\")\n",
         "\n",
         "    async def stop(self):\n",
+        "        await super().stop()\n",
         "        print(\"Stopping the robot.\")\n",
+        "\n",
+        "    @property\n",
+        "    def num_channels(self) -> int:\n",
+        "        return self._num_channels\n",
         "\n",
         "    async def assigned_resource_callback(self, resource: Resource):\n",
         "        print(f\"Resource {resource.name} was assigned to the robot.\")\n",
@@ -209,32 +180,204 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 12,
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Instantiating the PiperBackend with num_channels=2\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "back = PiperBackend()\n",
+        "Instantiate the Piper backend, with one channel:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "backend = PiperBackend(num_channels=1)\n",
         "\n",
-        "back.num_channels"
+        "backend.num_channels"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Create an instance of a \"liquid handler\" with the Hamilton deck (for example):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
+        "\n",
+        "await lh.setup()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Populate the deck with labware:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pylabrobot.resources import (\n",
+        "    TIP_CAR_480_A00,\n",
+        "    PLT_CAR_L5AC_A00,\n",
+        "    Cos_96_DW_1mL,\n",
+        "    HTF_L\n",
+        ")\n",
+        "\n",
+        "tip_car = TIP_CAR_480_A00(name='tip carrier')\n",
+        "tip_car[0] = HTF_L(name='tips_01')\n",
+        "\n",
+        "lh.deck.assign_child_resource(tip_car, rails=3)\n",
+        "\n",
+        "plt_car = PLT_CAR_L5AC_A00(name='plate carrier')\n",
+        "plt_car[0] = Cos_96_DW_1mL(name='plate_01')\n",
+        "\n",
+        "lh.deck.assign_child_resource(plt_car, rails=15)\n",
+        "\n",
+        "lh.summary()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Pick up a tip, and aspirate from two wells:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tiprack = lh.get_resource(\"tips_01\")\n",
+        "await lh.pick_up_tips(tiprack[\"A1\"])\n",
+        "\n",
+        "plate = lh.get_resource(\"plate_01\")\n",
+        "await lh.aspirate(plate[\"A1\"], vols=[100.0])"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dispense in another well, and drop the tips (back in the box):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "await lh.dispense(plate[\"D1\"], vols=[100.0])\n",
+        "\n",
+        "await lh.drop_tips(tiprack[\"A1\"])"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Terminate the liquid handler:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "await lh.stop()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Number of channels"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "backend = PiperBackend(num_channels=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
+        "await lh.setup()\n",
+        "\n",
+        "tip_car = TIP_CAR_480_A00(name='tip carrier')\n",
+        "tip_car[0] = HTF_L(name='tips_01')\n",
+        "\n",
+        "lh.deck.assign_child_resource(tip_car, rails=3)\n",
+        "\n",
+        "plt_car = PLT_CAR_L5AC_A00(name='plate carrier')\n",
+        "plt_car[0] = Cos_96_DW_1mL(name='plate_01')\n",
+        "\n",
+        "lh.deck.assign_child_resource(plt_car, rails=15)\n",
+        "\n",
+        "# lh.summary()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now lets try to break PLR by loading two tips into a single-channel backend:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import traceback\n",
+        "\n",
+        "try:\n",
+        "  tiprack = lh.get_resource(\"tips_01\")\n",
+        "  await lh.pick_up_tips(tiprack[\"A1:B1\"])\n",
+        "except:\n",
+        "  print(traceback.format_exc())\n",
+        "\n",
+        "await lh.stop()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The error is a bit obscure, but in retrospect it is sensible that it fails: https://github.com/PyLabRobot/pylabrobot/issues/26"
       ]
     },
     {
@@ -258,7 +401,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "backend = STAR()\n",
+        "# backend = STAR()\n",
+        "# backend = ChatterBoxBackend()\n",
+        "backend = PiperBackend()\n",
         "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
       ]
     },
@@ -491,6 +636,13 @@
       "source": [
         "await lh.stop()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
