--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -313,7 +313,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Number of channels"
+        "### Number of channels\n",
+        "\n",
+        "The number of \"pipetting channels\" represents how many tips a robot/backend/tool can operate simultaneously.\n",
+        "\n",
+        "This name is derived from the name of \"multichannel\" micropipettes, which can tipically fit 8 or 12 individual tips in a row, and load liquid into them simultaneously.\n",
+        "\n",
+        "Advanced robotic pipettes may support multi-channel with variable per-tip volume control (which is more alike a multi-pipette tool)."
       ]
     },
     {
@@ -322,7 +328,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "backend = PiperBackend(num_channels=1)"
+        "backend = PiperBackend(num_channels=2)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Setup the backend and populate the deck:"
       ]
     },
     {
@@ -339,12 +353,13 @@
         "\n",
         "lh.deck.assign_child_resource(tip_car, rails=3)\n",
         "\n",
-        "plt_car = PLT_CAR_L5AC_A00(name='plate carrier')\n",
+        "plt_car = PLT_CAR_L5AC_A00(name='plate carrier 1')\n",
         "plt_car[0] = Cos_96_DW_1mL(name='plate_01')\n",
+        "plt_car[1] = Cos_96_DW_1mL(name='plate_02')\n",
         "\n",
         "lh.deck.assign_child_resource(plt_car, rails=15)\n",
         "\n",
-        "# lh.summary()"
+        "lh.summary()"
       ]
     },
     {
@@ -352,7 +367,49 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now lets try to break PLR by loading two tips into a single-channel backend:"
+        "Inspect the tip rack:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# plate.children[0].serialize()\n",
+        "tiprack.serialize()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Pickup tips and aspirate some liquid:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tiprack = lh.get_resource(\"tips_01\")\n",
+        "await lh.pick_up_tips(tiprack[\"A1:B1\"])\n",
+        "\n",
+        "plate1 = lh.get_resource(\"plate_01\")\n",
+        "plate2 = lh.get_resource(\"plate_02\")\n",
+        "await lh.aspirate(plate1[\"A1\"] + plate2[\"A2\"], vols=100.0, use_channels=[0, 1])"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Miss-use of channels in PLR\n",
+        "\n",
+        "Now lets try to break PLR by placing more tips than the backend supports:"
       ]
     },
     {
@@ -365,9 +422,17 @@
         "\n",
         "try:\n",
         "  tiprack = lh.get_resource(\"tips_01\")\n",
-        "  await lh.pick_up_tips(tiprack[\"A1:B1\"])\n",
+        "  await lh.pick_up_tips(tiprack[\"A1:C1\"])\n",
         "except:\n",
-        "  print(traceback.format_exc())\n",
+        "  print(traceback.format_exc())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "await lh.stop()"
       ]
@@ -378,6 +443,25 @@
       "metadata": {},
       "source": [
         "The error is a bit obscure, but in retrospect it is sensible that it fails: https://github.com/PyLabRobot/pylabrobot/issues/26"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Multiple tools\n",
+        "\n",
+        "Using PLR with multiple-tool machines."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ?"
       ]
     },
     {
@@ -647,7 +731,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -662,6 +746,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "90d438140fb5b229a657b1d63754e0e9b5e5b84ccbcec444eeb29ea036eac1ef"
+      }
     }
   },
   "nbformat": 4,
