ChatterBoxBackend for original example

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -433,7 +433,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "await lh.stop()"
       ]
     },
@@ -442,7 +441,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The error is a bit obscure, but in retrospect it is sensible that it fails: https://github.com/PyLabRobot/pylabrobot/issues/26"
+        "It is sensible that it fails, see discussion at: https://github.com/PyLabRobot/pylabrobot/issues/26"
       ]
     },
     {
@@ -486,8 +485,9 @@
       "outputs": [],
       "source": [
         "# backend = STAR()\n",
-        "# backend = ChatterBoxBackend()\n",
-        "backend = PiperBackend()\n",
+        "backend = ChatterBoxBackend()\n",
+        "# backend = PiperBackend()\n",
+        "\n",
         "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
       ]
     },
