piper_backend: a bunch of progress
Most changes happened on piper, see TODO  in the notebook under
"Pipetting-bot backend".

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -476,9 +476,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Pipetting-bot\n",
+        "## Pipetting-bot backend\n",
         "\n",
-        "Write a new backend that uses the \"piper\" GCODE-generating module from the pipetting-bot project."
+        "Write a new backend that uses the \"piper\" GCODE-generating module from the pipetting-bot project.\n",
+        "\n",
+        "TODO:\n",
+        "\n",
+        "- [ ] Bug: commands can be sent to the backend before it is ready.\n",
+        "- [ ] Implement waiting/checking of command responses, and proper blocking.\n",
+        "- [ ] ¿Use queues?\n",
+        "- [ ] Write adapter to use decks as piper workspaces.\n",
+        "- [ ] Write adapter to pass object coordinates from PLR to piper, without recalculation.\n",
+        "- [ ] A lot more..."
       ]
     },
     {
@@ -488,191 +497,12 @@
       "outputs": [],
       "source": [
         "# Append custom module paths.\n",
-        "import os, sys\n",
-        "module_path = os.path.expanduser(\"~/Projects/GOSH/gosh-col-dev/pipettin-grbl/klipper/code/\")\n",
-        "sys.path.append(module_path)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\"\"\"\n",
-        "Piper backend for PLR.\n",
+        "# import os, sys\n",
+        "# module_path = os.path.expanduser(\"~/Projects/GOSH/gosh-col-dev/pipettin-grbl/klipper/code/\")\n",
+        "# sys.path.append(module_path)\n",
         "\n",
-        "It relies on the pipettin piper module, which uses the the websocket API provided by the Moonkraker program.\n",
-        "\n",
-        "See \"klipper_backend.py\" for a discussion on \"Klipper macro\" v.s. \"Piper\" as possible backends.\n",
-        "\"\"\"\n",
-        "\n",
-        "# pylint: disable=unused-argument\n",
-        "\n",
-        "from typing import List\n",
-        "\n",
-        "from pylabrobot.liquid_handling.backends import LiquidHandlerBackend\n",
-        "from pylabrobot.resources import Resource\n",
-        "from pylabrobot.liquid_handling.standard import (\n",
-        "    Pickup,\n",
-        "    PickupTipRack,\n",
-        "    Drop,\n",
-        "    DropTipRack,\n",
-        "    Aspiration,\n",
-        "    AspirationPlate,\n",
-        "    Dispense,\n",
-        "    DispensePlate,\n",
-        "    Move\n",
-        ")\n",
-        "\n",
-        "# Load piper modules.\n",
-        "from piper.commander_utils_mongo import MongoObjects\n",
-        "from piper.gcode import GcodeBuilder\n",
-        "from piper.coroutines_moon import moonControl\n",
-        "\n",
-        "class PiperBackend(LiquidHandlerBackend):\n",
-        "    \"\"\" Chatter box backend for 'How to Open Source' \"\"\"\n",
-        "\n",
-        "    def __init__(self, \n",
-        "                 num_channels: int = 1, \n",
-        "                 mongo_url: str = \"mongodb://localhost:27017/\",\n",
-        "                 verbose: bool = True,\n",
-        "                 protocol_name=None,\n",
-        "                 workspace=None):\n",
-        "        \"\"\"Init method for the PiperBackend.\"\"\"\n",
-        "\n",
-        "        print(f\"Instantiating the PiperBackend with num_channels={num_channels}\")\n",
-        "        super().__init__()\n",
-        "        \n",
-        "        self._num_channels = num_channels\n",
-        "        \n",
-        "        self.verbose = verbose\n",
-        "\n",
-        "        # Setup database tools.\n",
-        "        self.mo = MongoObjects(mongo_url=mongo_url, verbose=verbose)\n",
-        "\n",
-        "        # List protocols (will print possible protocol names).\n",
-        "        self.protocols = self.mo.listProtocols()\n",
-        "\n",
-        "        # Get workspace info (i.e. the \"deck\" in PLR terms).\n",
-        "        if not protocol_name:\n",
-        "            protocol_name = self.protocols[-1][\"name\"]\n",
-        "        protocol, workspace, platforms_in_workspace = self.mo.getProtocolObjects(protocol_name=protocol_name)\n",
-        "        # workspace = self.mo.getWorkspaceByName(workspace_name=\"asdasd\")\n",
-        "        # platforms_in_workspace = self.mo.getPlatformsInWorkspace(workspace=workspace)\n",
-        "        # workspace, platforms_in_workspace = None, None\n",
-        "\n",
-        "        # Instatiate the builder class\n",
-        "        self.builder = GcodeBuilder(protocol=protocol,\n",
-        "                                    workspace=workspace,\n",
-        "                                    platformsInWorkspace=platforms_in_workspace,\n",
-        "                                    verbose = verbose)\n",
-        "\n",
-        "        # Setup\n",
-        "        self.commands = []\n",
-        "        self.tracker = {}\n",
-        "        # Connection to Moonraker\n",
-        "        self.moon = moonControl(commands=self.commands, tracker=self.tracker, verbose=verbose)\n",
-        "\n",
-        "    async def setup(self):\n",
-        "        await super().setup()\n",
-        "        print(\"Setting up the robot.\")\n",
-        "        \n",
-        "        # TODO: connect to Moonraker\n",
-        "        self.moon.start_as_task()\n",
-        "\n",
-        "        # TODO: customize parameters.\n",
-        "        home_action = {'cmd': 'HOME'}\n",
-        "        gcode = self.builder.addAction(action=home_action)\n",
-        "\n",
-        "        # TODO: send the home command to moonraker.\n",
-        "\n",
-        "    async def stop(self):\n",
-        "        await super().stop()\n",
-        "        print(\"Stopping the robot.\")\n",
-        "\n",
-        "    @property\n",
-        "    def num_channels(self) -> int:\n",
-        "        return self._num_channels\n",
-        "\n",
-        "    async def assigned_resource_callback(self, resource: Resource):\n",
-        "        print(f\"Resource {resource.name} was assigned to the robot.\")\n",
-        "        # TODO: should this update the workspace?\n",
-        "\n",
-        "    async def unassigned_resource_callback(self, name: str):\n",
-        "        print(f\"Resource {name} was unassigned from the robot.\")\n",
-        "        # TODO: should this update the workspace?\n",
-        "\n",
-        "    # Atomic implemented in hardware.\n",
-        "\n",
-        "\n",
-        "    async def pick_up_tips(self, ops: List[Pickup], use_channels: List[int], **backend_kwargs):\n",
-        "        print(f\"Picking up tips {ops}.\")\n",
-        "\n",
-        "        # Make GCODE\n",
-        "        # TODO: customize parameters.\n",
-        "        pick_up_tip_action = {'args': {'item': '200ul_tip_rack_MULTITOOL 1', 'tool': 'P200'}, 'cmd': 'PICK_TIP'}\n",
-        "        gcode = builder.addAction(action=pick_up_tip_action)\n",
-        "\n",
-        "        # Send commands.\n",
-        "        # TODO: send gcode to moonraker.\n",
-        "\n",
-        "\n",
-        "    async def drop_tips(self, ops: List[Drop], use_channels: List[int], **backend_kwargs):\n",
-        "        print(f\"Dropping tips {ops}.\")\n",
-        "\n",
-        "        # TODO: customize parameters.\n",
-        "        drop_tip_action = {'args': {'item': 'descarte 1'}, 'cmd': 'DISCARD_TIP'}\n",
-        "        gcode = builder.addAction(action=drop_tip_action)\n",
-        "\n",
-        "        # Send commands.\n",
-        "        # TODO: send gcode to moonraker.\n",
-        "\n",
-        "\n",
-        "    async def aspirate(self, ops: List[Aspiration], use_channels: List[int], **backend_kwargs):\n",
-        "        print(f\"Aspirating {ops}.\")\n",
-        "\n",
-        "        # Make GCODE\n",
-        "        aspirate_liquid_action = {'args': {'item': '5x16_1.5_rack 1',\n",
-        "                                  'selector': {'by': 'name', 'value': 'tube1'},\n",
-        "                                  'volume': 100},\n",
-        "                                  'cmd': 'LOAD_LIQUID'}\n",
-        "        gcode = builder.addAction(action=aspirate_liquid_action)\n",
-        "\n",
-        "        # Send commands.\n",
-        "        # TODO: send gcode to moonraker.\n",
-        "\n",
-        "\n",
-        "    async def dispense(self, ops: List[Dispense], use_channels: List[int], **backend_kwargs):\n",
-        "        print(f\"Dispensing {ops}.\")\n",
-        "\n",
-        "        # Make GCODE\n",
-        "        dispense_liquid_action = {'args': {'item': '5x16_1.5_rack 1',\n",
-        "                                  'selector': {'by': 'name', 'value': 'tube2'},\n",
-        "                                  'volume': 100},\n",
-        "                                  'cmd': 'DROP_LIQUID'}\n",
-        "        gcode = builder.addAction(action=dispense_liquid_action)\n",
-        "\n",
-        "        # Send commands.\n",
-        "        # TODO: send gcode to moonraker.\n",
-        "\n",
-        "    # Atomic actions not implemented in hardware.\n",
-        "    # TODO: implement these methods as a required human intervention.\n",
-        "    async def pick_up_tips96(self, pickup: PickupTipRack):\n",
-        "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
-        "\n",
-        "    async def drop_tips96(self, drop: DropTipRack):\n",
-        "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
-        "\n",
-        "    async def aspirate96(self, aspiration: AspirationPlate):\n",
-        "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
-        "\n",
-        "    async def dispense96(self, dispense: DispensePlate):\n",
-        "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
-        "\n",
-        "    async def move_resource(self, move: Move):\n",
-        "        \"\"\" Move the specified lid within the robot. \"\"\"\n",
-        "        raise NotImplementedError(\"Moving resources is not implemented yet.\")\n"
+        "from pprint import pprint\n",
+        "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend"
       ]
     },
     {
@@ -699,7 +529,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "cmd_id = await backend.moon.send_gcode_cmd(\"SET_KINEMATIC_POSITION X=10\", wait=True, check=True, timeout=1.0)"
+        "backend.moon.status()"
       ]
     },
     {
@@ -708,7 +538,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from pprint import pprint\n",
+        "cmd_id = await backend.moon.send_gcode_cmd(\"SET_KINEMATIC_POSITION X=0 Y=0 Z=0\", wait=True, check=True, timeout=1.0)\n",
         "pprint(backend.tracker[cmd_id])"
       ]
     },
@@ -718,7 +548,82 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "await backend.moon.stop()"
+        "cmd_id = await backend.moon.send_gcode_cmd(\"FICTITIOUS COMMAND\", wait=True, check=True, timeout=2.0)\n",
+        "pprint(backend.tracker[cmd_id], width=120)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# pprint(backend.tracker[cmd_id])\n",
+        "# backend.tracker[cmd_id][\"response\"]\n",
+        "backend.tracker[cmd_id][\"response\"][\"error\"]\n",
+        "# backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"]\n",
+        "# print(backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# cmd_id = await backend.moon.send_gcode_cmd(\"G0 X100\", wait=True, check=True, timeout=1.0)\n",
+        "# pprint(backend.tracker[cmd_id])\n",
+        "\n",
+        "# Make GCODE\n",
+        "# TODO: customize parameters.\n",
+        "pick_up_tip_action = {\n",
+        "    'args': {'item': '200ul_tip_rack_MULTITOOL 1', 'tool': 'P200'},\n",
+        "    'cmd': 'PICK_TIP'}\n",
+        "gcode = backend.builder.addAction(action=pick_up_tip_action)\n",
+        "pprint(gcode)\n",
+        "\n",
+        "# Send commands.\n",
+        "cmd_id = await backend.moon.send_gcode_script(gcode, wait=True, check=True, timeout=2.0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# pprint(backend.tracker[cmd_id])\n",
+        "backend.tracker[cmd_id][\"response\"]\n",
+        "# backend.tracker[cmd_id][\"response\"][\"error\"]\n",
+        "# print(backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Wait for idle printer.\n",
+        "await backend.moon.wait_for_idle_printer(timeout = 999.0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "await backend.moon.wait_for_idle_printer()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "await backend.stop()"
       ]
     },
     {
