--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -93,18 +93,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\"\"\"\n",
-        "Piper backend for PLR.\n",
-        "\n",
-        "It relies on the pipettin piper module, which uses the the websocket API provided by the Moonkraker program.\n",
-        "\n",
-        "See \"klipper_backend.py\" for a discussion on \"Klipper macro\" v.s. \"Piper\" as possible backends.\n",
-        "\"\"\"\n",
-        "\n",
-        "# pylint: disable=unused-argument\n",
-        "\n",
         "from typing import List\n",
-        "\n",
         "from pylabrobot.liquid_handling.backends import LiquidHandlerBackend\n",
         "from pylabrobot.resources import Resource\n",
         "from pylabrobot.liquid_handling.standard import (\n",
@@ -120,8 +109,8 @@
         ")\n",
         "\n",
         "\n",
-        "class PiperBackend(LiquidHandlerBackend):\n",
-        "    \"\"\" Chatter box backend for 'How to Open Source' \"\"\"\n",
+        "class EchoBackend(LiquidHandlerBackend):\n",
+        "    \"\"\" Yet another Chatter box backend for 'How to Open Source' \"\"\"\n",
         "\n",
         "    def __init__(self, num_channels: int = 1):\n",
         "        \"\"\"Init method for the PiperBackend.\"\"\"\n",
@@ -161,7 +150,6 @@
         "        print(f\"Dispensing {ops}.\")\n",
         "\n",
         "    # Atomic actions not implemented in hardware.\n",
-        "    # TODO: implement these methods as a required human intervention.\n",
         "    async def pick_up_tips96(self, pickup: PickupTipRack):\n",
         "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
         "\n",
@@ -193,7 +181,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "backend = PiperBackend(num_channels=1)\n",
+        "backend = EchoBackend(num_channels=1)\n",
         "\n",
         "backend.num_channels"
       ]
@@ -328,7 +316,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "backend = PiperBackend(num_channels=2)"
+        "backend = EchoBackend(num_channels=2)"
       ]
     },
     {
