--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -474,7 +474,10 @@
         "- [ ] Implement waiting/checking of command responses, and proper blocking.\n",
         "- [ ] ¿Use queues?\n",
         "- [ ] Write adapter to use decks as piper workspaces.\n",
-        "- [ ] Write adapter to pass object coordinates from PLR to piper, without recalculation.\n",
+        "  - This may not be necessary if all the required info is passed to the PLR.\n",
+        "  - ¿Do other backends need to access the \"deck\" object?\n",
+        "- [ ] Write adapter to pass object coordinates from PLR to piper (not relying on workspaces).\n",
+        "  - See pylabrobot/liquid_handling/standard.py\n",
         "- [ ] A lot more..."
       ]
     },
