notes on lh operations, piper side improvements

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -70,6 +70,7 @@
       "outputs": [],
       "source": [
         "# Basic imports:\n",
+        "from pprint import pprint, pformat\n",
         "# - liquid handler\n",
         "from pylabrobot.liquid_handling import LiquidHandler\n",
         "# - backend\n",
@@ -117,6 +118,7 @@
         "        print(f\"Instantiating the PiperBackend with num_channels={num_channels}\")\n",
         "        super().__init__()\n",
         "        self._num_channels = num_channels\n",
+        "        self.commands = []\n",
         "\n",
         "    async def setup(self):\n",
         "        await super().setup()\n",
@@ -139,15 +141,19 @@
         "    # Atomic implemented in hardware.\n",
         "    async def pick_up_tips(self, ops: List[Pickup], use_channels: List[int], **backend_kwargs):\n",
         "        print(f\"Picking up tips {ops}.\")\n",
+        "        self.commands.append({\"cmd\": \"pick_up_tips\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
         "\n",
         "    async def drop_tips(self, ops: List[Drop], use_channels: List[int], **backend_kwargs):\n",
         "        print(f\"Dropping tips {ops}.\")\n",
+        "        self.commands.append({\"cmd\": \"drop_tips\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
         "\n",
         "    async def aspirate(self, ops: List[Aspiration], use_channels: List[int], **backend_kwargs):\n",
         "        print(f\"Aspirating {ops}.\")\n",
+        "        self.commands.append({\"cmd\": \"aspirate\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
         "\n",
         "    async def dispense(self, ops: List[Dispense], use_channels: List[int], **backend_kwargs):\n",
         "        print(f\"Dispensing {ops}.\")\n",
+        "        self.commands.append({\"cmd\": \"dispense\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
         "\n",
         "    # Atomic actions not implemented in hardware.\n",
         "    async def pick_up_tips96(self, pickup: PickupTipRack):\n",
@@ -254,10 +260,97 @@
       "outputs": [],
       "source": [
         "tiprack = lh.get_resource(\"tips_01\")\n",
-        "await lh.pick_up_tips(tiprack[\"A1\"])\n",
-        "\n",
+        "await lh.pick_up_tips(tiprack[\"A1\"])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tiprack[\"A1\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "plate = lh.get_resource(\"plate_01\")\n",
         "await lh.aspirate(plate[\"A1\"], vols=[100.0])"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Inspect the objects passed to aspirate:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pprint(lh.backend.commands)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pick_up_ops = lh.backend.commands[0][\"ops\"]\n",
+        "pick_up_op = pick_up_ops[0]\n",
+        "tip = pick_up_op.tip\n",
+        "\n",
+        "pprint(pick_up_op)\n",
+        "pprint(pick_up_op.serialize())"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Get the absolute spatial coordinate of the tip's location:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pick_up_op.get_absolute_location()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The offset attribute, unless altered by the lh or backend, is a \"Default\" object.\n",
+        "\n",
+        "It has no information whatsoever, other than it hints that it should be replaced by a default value."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(pick_up_op.offset)\n",
+        "\n",
+        "from pylabrobot.default import get_value\n",
+        "\n",
+        "get_value(value=pick_up_op.offset, default=\"hola\")"
       ]
     },
     {
@@ -539,7 +632,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "cmd_id = await backend.moon.send_gcode_cmd(\"FICTITIOUS COMMAND\", wait=True, check=True, timeout=2.0)\n",
+        "cmd_id = await backend.moon.send_gcode_cmd(\"FICTITIOUS COMMAND\", wait=True, check=True, timeout=10.0)\n",
+        "# cmd_id = await backend.moon.send_gcode_cmd(\"M105\", wait=True, check=True, timeout=10.0)\n",
+        "#cmd_id = await backend.moon.send_gcode_cmd(\"G0 X1\", wait=True, check=True, timeout=10.0)\n",
         "pprint(backend.tracker[cmd_id], width=120)"
       ]
     },
@@ -549,9 +644,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# pprint(backend.tracker[cmd_id])\n",
+        "pprint(backend.tracker[cmd_id])\n",
         "# backend.tracker[cmd_id][\"response\"]\n",
-        "backend.tracker[cmd_id][\"response\"][\"error\"]\n",
+        "# backend.tracker[cmd_id][\"response\"][\"error\"]\n",
         "# backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"]\n",
         "# print(backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"])"
       ]
