--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -114,8 +114,8 @@
         "    \"\"\" Yet another Chatter box backend for 'How to Open Source' \"\"\"\n",
         "\n",
         "    def __init__(self, num_channels: int = 1):\n",
-        "        \"\"\"Init method for the PiperBackend.\"\"\"\n",
-        "        print(f\"Instantiating the PiperBackend with num_channels={num_channels}\")\n",
+        "        \"\"\"Init method for the EchoBackend.\"\"\"\n",
+        "        print(f\"Instantiating the EchoBackend with num_channels={num_channels}\")\n",
         "        super().__init__()\n",
         "        self._num_channels = num_channels\n",
         "        self.commands = []\n",
@@ -178,7 +178,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Instantiate the Piper backend, with one channel:"
+        "Instantiate the Echo backend, with one channel:"
       ]
     },
     {
@@ -509,12 +509,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "await lh.stop()"
+        "It is sensible that it fails, see discussion at: https://github.com/PyLabRobot/pylabrobot/issues/26"
       ]
     },
     {
@@ -522,7 +521,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "It is sensible that it fails, see discussion at: https://github.com/PyLabRobot/pylabrobot/issues/26"
+        "Bye!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "await lh.stop()"
       ]
     },
     {
