mongo setup is optional, pass all addresses to moonControl
TODO: trying to use it will fail horribly

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!echo $VIRTUAL_ENV\n",
@@ -44,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -61,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Basic imports:\n",
@@ -85,7 +91,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from typing import List\n",
@@ -177,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "backend = EchoBackend(num_channels=1)\n",
@@ -195,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
@@ -213,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pylabrobot.resources import (\n",
@@ -246,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tiprack = lh.get_resource(\"tips_01\")\n",
@@ -256,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tiprack[\"A1\"]"
@@ -265,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plate = lh.get_resource(\"plate_01\")\n",
@@ -282,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pprint(lh.backend.commands)"
@@ -291,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pick_up_ops = lh.backend.commands[0][\"ops\"]\n",
@@ -312,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pick_up_op.get_absolute_location()"
@@ -330,14 +356,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "from pylabrobot.default import get_value\n",
+    "from pylabrobot.resources.coordinate import Coordinate\n",
+    "\n",
+    "origin = Coordinate(0,0,0)\n",
+    "\n",
+    "# Prints \"Default\" which only indicates that this should be replaced by a default value.\n",
     "print(pick_up_op.offset)\n",
     "\n",
-    "from pylabrobot.default import get_value\n",
-    "\n",
-    "get_value(value=pick_up_op.offset, default=\"hola\")"
+    "# A default value can be set like this:\n",
+    "default_offset = get_value(value=pick_up_op.offset, default=origin)\n",
+    "print(default_offset)"
    ]
   },
   {
@@ -350,7 +384,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await lh.dispense(plate[\"D1\"], vols=[100.0])\n",
@@ -368,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await lh.stop()"
@@ -560,7 +598,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Install the \"piper\" module from the path to the module's directory (replace appropriately).\n",
+    "# $ pip install -e ~/Projects/robot/pipettin-bot/klipper/piper/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Append custom module paths.\n",
@@ -573,18 +625,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "backend = PiperBackend(verbose=False)"
+    "Check that mongo is accessible from outside (if running this remotely). Otherwise see: https://www.digitalocean.com/community/tutorials/how-to-configure-remote-access-for-mongodb-on-ubuntu-20-04"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!nc -zv 192.168.11.39 27017  # Should output \"192.168.11.39 27017 (mongodb) open\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Set \"mongo_url = None\" to skip the database connection.\n",
+    "backend = PiperBackend(verbose=True,\n",
+    "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
+    "                       sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
+    "                       ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await backend.setup()"
@@ -593,16 +672,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "backend.moon.status()"
+    "pprint(backend.moon.status())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "await backend.moon.wait_for_idle_printer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cmd_id = await backend.moon.send_gcode_cmd(\"SET_KINEMATIC_POSITION X=0 Y=0 Z=0\", wait=True, check=True, timeout=1.0)\n",
@@ -612,7 +706,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cmd_id = await backend.moon.send_gcode_cmd(\"FICTITIOUS COMMAND\", wait=True, check=True, timeout=10.0)\n",
@@ -624,7 +720,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pprint(backend.tracker[cmd_id])\n",
@@ -637,7 +735,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# cmd_id = await backend.moon.send_gcode_cmd(\"G0 X100\", wait=True, check=True, timeout=1.0)\n",
@@ -648,9 +748,19 @@
     "pick_up_tip_action = {\n",
     "    'args': {'item': '200ul_tip_rack_MULTITOOL 1', 'tool': 'P200'},\n",
     "    'cmd': 'PICK_TIP'}\n",
-    "gcode = backend.builder.addAction(action=pick_up_tip_action)\n",
-    "pprint(gcode)\n",
-    "\n",
+    "home_action = {'cmd': 'HOME'}\n",
+    "gcode = backend.builder.addAction(action=home_action)\n",
+    "pprint(gcode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Send commands.\n",
     "cmd_id = await backend.moon.send_gcode_script(gcode, wait=True, check=True, timeout=2.0)"
    ]
@@ -658,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# pprint(backend.tracker[cmd_id])\n",
@@ -670,11 +782,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Wait for idle printer.\n",
-    "await backend.moon.wait_for_idle_printer(timeout = 999.0)"
+    "result = await backend.moon.wait_for_idle_printer(timeout = 999.0)\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
