successffully setup and homing commands

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -688,7 +688,7 @@
    },
    "outputs": [],
    "source": [
-    "await backend.moon.wait_for_idle_printer()"
+    "await backend.moon.wait_for_idle_printer(timeout = 20.0)"
    ]
   },
   {
@@ -774,7 +774,7 @@
    "outputs": [],
    "source": [
     "# pprint(backend.tracker[cmd_id])\n",
-    "backend.tracker[cmd_id][\"response\"]\n",
+    "# backend.tracker[cmd_id][\"response\"]\n",
     "# backend.tracker[cmd_id][\"response\"][\"error\"]\n",
     "# print(backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"])"
    ]
@@ -788,18 +788,9 @@
    "outputs": [],
    "source": [
     "# Wait for idle printer.\n",
-    "result = await backend.moon.wait_for_idle_printer(timeout = 999.0)\n",
+    "result = await backend.moon.wait_for_idle_printer(timeout = 20.0)\n",
     "\n",
     "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await backend.moon.wait_for_idle_printer()"
    ]
   },
   {
